vlib/v/checker/tests/array_contains_args_err.vv
fn main() {
	arr := [0]
	mut ret := [0].contains([0])
	ret = [0].contains()
	ret = [0, 1, 2].contains(0, 1, 2)
	ret = [0].contains('a')
	ret = [0].contains(arr)
	println(ret)
}
